# 3856_assignment_2

./: Makefile  README.md  pyproject.toml
experiments/: general_testing.py  neural_network_testing.py  prune_experiment.py  random_forest_testing.py  train_pipeline.py
ml_assignment_2/: config.py  dataset.py
ml_assignment_2/modeling/: decision_tree.py  gradient_boost.py  models.py  random_forest.py  xgboost.py
models/: general_testing.py  neural_network_testing.py  train_pipeline.py
notebooks/: 1.0-mk-initial-data-exploration.ipynb
reports/: model_comparison_table_1.xlsx
src/: data_loader.py
