[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "ml_assignment_2"
version = "0.0.1"
description = "This is the analysis of the abalone dataset"
authors = [
  { name = "Minjun Kim, Zheyu He" },
]

readme = "README.md"
classifiers = [
    "Programming Language :: Python :: 3",
    
]
requires-python = "~=3.12.0"


[tool.ruff]
line-length = 99
src = ["ml_assignment_2"]
include = ["pyproject.toml", "ml_assignment_2/**/*.py"]

[tool.ruff.lint]
extend-select = ["I"]  # Add import sorting

[tool.ruff.lint.isort]
known-first-party = ["ml_assignment_2"]
force-sort-within-sections = true

